// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MErrorMessage given error should render correctly expanded 1`] = `
<div class="m-error-message">
  <div class="m-message m--is-state-error m--is-skin-default">
    <div class="m-message__wrap">
      <div class="m-message__icon"><svg aria-hidden="true" width="1em" height="1em" class="m-icon">
          <use aria-hidden="true"></use>
        </svg></div>
      <div class="m-message__body">
        <div class="m-message__text"><span class="m-i18n">Un problème technique s'est produit et empêche la tâche en cours de s'achever normalement.</span></div>
      </div>
    </div>
  </div>
  <p><span class="m-i18n">Vous pouvez attendre quelques minutes et réessayer.</span></p>
  <p><span class="m-i18n">Si le problème persiste, vous pouvez contacter le soutien technique en leur fournissant le détail de l'erreur.</span></p>
  <div skin="light" icon-size="small"><span class="m-i18n">Détails de l'erreur</span>
    <p><strong><span class="m-i18n">Navigateur</span>: </strong>modul-user-agent</p>
    <p><strong><span class="m-i18n">No référence de l'erreur</span>: </strong>123456879</p>
    <p>Elle a eu lieu le &lt;strong&gt;2018-01-02&lt;/strong&gt; à &lt;strong&gt;00:01:02&lt;/strong&gt;</p>
  </div> <a href="/" tabindex="0" class="m-link m--has-content"> <span class="m-link__text"><span class="m-i18n">Pour obtenir de l'aide, contactez le soutien technique</span></span> </a>
</div>
`;

exports[`MErrorMessage given error should render correctly expanded with stack trace on 1`] = `
<div class="m-error-message">
  <div class="m-message m--is-state-error m--is-skin-default">
    <div class="m-message__wrap">
      <div class="m-message__icon"><svg aria-hidden="true" width="1em" height="1em" class="m-icon">
          <use aria-hidden="true"></use>
        </svg></div>
      <div class="m-message__body">
        <div class="m-message__text"><span class="m-i18n">Un problème technique s'est produit et empêche la tâche en cours de s'achever normalement.</span></div>
      </div>
    </div>
  </div>
  <p><span class="m-i18n">Vous pouvez attendre quelques minutes et réessayer.</span></p>
  <p><span class="m-i18n">Si le problème persiste, vous pouvez contacter le soutien technique en leur fournissant le détail de l'erreur.</span></p>
  <div skin="light" icon-size="small"><span class="m-i18n">Détails de l'erreur</span>
    <p><strong><span class="m-i18n">Navigateur</span>: </strong>modul-user-agent</p>
    <p><strong><span class="m-i18n">No référence de l'erreur</span>: </strong>123456879</p>
    <p>Elle a eu lieu le &lt;strong&gt;2018-01-02&lt;/strong&gt; à &lt;strong&gt;00:01:02&lt;/strong&gt;</p>
    <div class="m-error-message__stacktrace"><pre></pre>
    </div>
  </div> <a href="/" tabindex="0" class="m-link m--has-content"> <span class="m-link__text"><span class="m-i18n">Pour obtenir de l'aide, contactez le soutien technique</span></span> </a>
</div>
`;

exports[`MErrorMessage given error with stack trace should render correctly expanded 1`] = `
<div class="m-error-message">
  <div class="m-message m--is-state-error m--is-skin-default">
    <div class="m-message__wrap">
      <div class="m-message__icon"><svg aria-hidden="true" width="1em" height="1em" class="m-icon">
          <use aria-hidden="true"></use>
        </svg></div>
      <div class="m-message__body">
        <div class="m-message__text"><span class="m-i18n">Un problème technique s'est produit et empêche la tâche en cours de s'achever normalement.</span></div>
      </div>
    </div>
  </div>
  <p><span class="m-i18n">Vous pouvez attendre quelques minutes et réessayer.</span></p>
  <p><span class="m-i18n">Si le problème persiste, vous pouvez contacter le soutien technique en leur fournissant le détail de l'erreur.</span></p>
  <div skin="light" icon-size="small"><span class="m-i18n">Détails de l'erreur</span>
    <p><strong><span class="m-i18n">Navigateur</span>: </strong>modul-user-agent</p>
    <p><strong><span class="m-i18n">No référence de l'erreur</span>: </strong>123456879</p>
    <p>Elle a eu lieu le &lt;strong&gt;2018-01-02&lt;/strong&gt; à &lt;strong&gt;00:01:02&lt;/strong&gt;</p>
  </div> <a href="/" tabindex="0" class="m-link m--has-content"> <span class="m-link__text"><span class="m-i18n">Pour obtenir de l'aide, contactez le soutien technique</span></span> </a>
</div>
`;

exports[`MErrorMessage given error with stack trace should render correctly expanded with stack trace on 1`] = `
<div class="m-error-message">
  <div class="m-message m--is-state-error m--is-skin-default">
    <div class="m-message__wrap">
      <div class="m-message__icon"><svg aria-hidden="true" width="1em" height="1em" class="m-icon">
          <use aria-hidden="true"></use>
        </svg></div>
      <div class="m-message__body">
        <div class="m-message__text"><span class="m-i18n">Un problème technique s'est produit et empêche la tâche en cours de s'achever normalement.</span></div>
      </div>
    </div>
  </div>
  <p><span class="m-i18n">Vous pouvez attendre quelques minutes et réessayer.</span></p>
  <p><span class="m-i18n">Si le problème persiste, vous pouvez contacter le soutien technique en leur fournissant le détail de l'erreur.</span></p>
  <div skin="light" icon-size="small"><span class="m-i18n">Détails de l'erreur</span>
    <p><strong><span class="m-i18n">Navigateur</span>: </strong>modul-user-agent</p>
    <p><strong><span class="m-i18n">No référence de l'erreur</span>: </strong>123456879</p>
    <p>Elle a eu lieu le &lt;strong&gt;2018-01-02&lt;/strong&gt; à &lt;strong&gt;00:01:02&lt;/strong&gt;</p>
    <div class="m-error-message__stacktrace"><pre>This is a stack trace</pre>
    </div>
  </div> <a href="/" tabindex="0" class="m-link m--has-content"> <span class="m-link__text"><span class="m-i18n">Pour obtenir de l'aide, contactez le soutien technique</span></span> </a>
</div>
`;

exports[`MErrorMessage should render correctly collapsed 1`] = `
<div class="m-error-message">
  <div class="m-message m--is-state-error m--is-skin-default">
    <div class="m-message__wrap">
      <div class="m-message__icon"><svg aria-hidden="true" width="1em" height="1em" class="m-icon">
          <use aria-hidden="true"></use>
        </svg></div>
      <div class="m-message__body">
        <div class="m-message__text"><span class="m-i18n">Un problème technique s'est produit et empêche la tâche en cours de s'achever normalement.</span></div>
      </div>
    </div>
  </div>
  <p><span class="m-i18n">Vous pouvez attendre quelques minutes et réessayer.</span></p>
  <p><span class="m-i18n">Si le problème persiste, vous pouvez contacter le soutien technique en leur fournissant le détail de l'erreur.</span></p>
  <article class="m-accordion m--is-light m--is-closed m--has-icon-left">
    <div id="uuid" aria-controls="uuid-body-wrap" tabindex="0" role="tab" class="m-accordion__header m--has-padding">
      <div class="m-accordion__header__content"><span class="m-i18n">Détails de l'erreur</span> <span class="m-i18n m-accordion__hidden">m-accordion:open</span> </div> <span title="m-accordion:open" aria-hidden="true" class="m-plus m-accordion__header-icon m--is-skin-default m--has-border m--is-left"></span>
    </div>
  </article> <a href="/" tabindex="0" class="m-link m--has-content"> <span class="m-link__text"><span class="m-i18n">Pour obtenir de l'aide, contactez le soutien technique</span></span> </a>
</div>
`;

exports[`MErrorMessage should render correctly expanded 1`] = `
<div class="m-error-message">
  <div class="m-message m--is-state-error m--is-skin-default">
    <div class="m-message__wrap">
      <div class="m-message__icon"><svg aria-hidden="true" width="1em" height="1em" class="m-icon">
          <use aria-hidden="true"></use>
        </svg></div>
      <div class="m-message__body">
        <div class="m-message__text"><span class="m-i18n">Un problème technique s'est produit et empêche la tâche en cours de s'achever normalement.</span></div>
      </div>
    </div>
  </div>
  <p><span class="m-i18n">Vous pouvez attendre quelques minutes et réessayer.</span></p>
  <p><span class="m-i18n">Si le problème persiste, vous pouvez contacter le soutien technique en leur fournissant le détail de l'erreur.</span></p>
  <div skin="light" icon-size="small"><span class="m-i18n">Détails de l'erreur</span>
    <p><strong><span class="m-i18n">Navigateur</span>: </strong>modul-user-agent</p>
    <p><strong><span class="m-i18n">No référence de l'erreur</span>: </strong>123456879</p>
    <p>Elle a eu lieu le &lt;strong&gt;2018-01-02&lt;/strong&gt; à &lt;strong&gt;00:01:02&lt;/strong&gt;</p>
  </div> <a href="/" tabindex="0" class="m-link m--has-content"> <span class="m-link__text"><span class="m-i18n">Pour obtenir de l'aide, contactez le soutien technique</span></span> </a>
</div>
`;
